--- a/DESAFIOS/D010R/estilo/style.css
+++ b/DESAFIOS/D010R/estilo/style.css
@@ -60,7 +60,7 @@ header > p {
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 30px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);   
 }
 
@@ -187,12 +187,7 @@ aside > ul {
     columns: 2;
 
 }
-
-    
-
-
-
-
+ 
 footer {
     background-color:var(--cor5) ;
     color: white;
